# respect-my-authoritah

./: .gitignore  README.md  TODO.md  pyproject.toml  respect-my-authoritah.py
.github/workflows/: respect-my-authoritah.yml
respect_my_authoritah/: cli.py  respect_my_authoritah.py  template.md
respect_my_authoritah/templates/: pull-request.md
