[project]
description = "Update authors list in pyproject.toml from GitHub contributors"
license = "MIT"
name = "respect-my-authoritah"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "jinja2",
    "requests",
    "tomlkit",
]

[project.scripts]
respect-my-authoritah = "respect_my_authoritah.cli:main"

[tool.hatch.build]
include = [
    "**/*.py",
    "*.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
